# Tomato

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: generate_tomato_icon.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  notifications.rs  state.rs  timer.rs  watchdog.rs  widget.rs
src-tauri/src/commands/: mod.rs  sessions.rs  settings.rs  statistics.rs  tags.rs  timer.rs
src-tauri/src/db/: mod.rs  sessions.rs  settings.rs  tags.rs  timer_state.rs
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/settings/: AboutSection.tsx  TimerSettings.tsx
src/components/shared/: PageHeader.tsx  PageTransition.tsx  ThemeProvider.tsx  ToastProvider.tsx
src/components/stats/: DailyStatsCard.tsx  MonthlyStats.tsx  SessionList.tsx  TagPieChart.tsx  WeeklyChart.tsx
src/components/timer/: CompletionDialog.tsx  PhaseIndicator.tsx  TagSelector.tsx  TimerCard.tsx  TimerControls.tsx  TimerDisplay.tsx  TimerProgress.tsx
src/components/ui/: card.tsx
src/hooks/: useKeyboardShortcuts.ts  useTimerDisplay.ts
src/lib/: constants.ts  sounds.ts  toast.ts
src/pages/: HomePage.tsx  SettingsPage.tsx  StatisticsPage.tsx  WidgetPage.tsx
src/stores/: sessionStore.ts  settingsStore.ts  statisticsStore.ts  tagStore.ts  timerStore.ts
src/types/: index.ts
